www/media/styles/flash.css
body {
    margin: 0;
}

.wpanel {
    overflow:hidden;
    height:2px;
    width:2px;
    max-width:100%;
    max-height:100%;
}

div.logo {
    background: url('alogo.png') no-repeat center;
    background-size: 260px;
    color: red;
    font-size: 100px;
    width: 300px;
    height: 100px;

    position: absolute;
    top: 15%;
    left: 50%;

    margin: 30px 0 -13px -170px;

    -webkit-user-select: none;  /* Chrome all / Safari all */
    -moz-user-select: none;     /* Firefox all */
    -ms-user-select: none;      /* IE 10+ */
    user-select: none;          /* Likely future */
}

button.button {
    width: 40px;
    height: 40px;
    border: 2px solid #880000;
    border-radius: 4px;
    display: inline-block;
    color: white;
    font-size: 22px;
    font-weight: 600;
    text-align: left;
    vertical-align: top;
    background-color: #cc5f52;
    float: left;
    line-height: 13px;
    cursor: pointer;
}

input[type=text]#myInp {
    width: 400px;
    box-sizing: border-box;
    border: 1px solid #ccc;
    border-radius: 4px;
    font-size: 18px;
    background-color: white;
    background-image: url('searchicon.png');
    background-position: 10px 12px;
    background-repeat: no-repeat;
    padding: 12px 20px 12px 40px;
    -webkit-transition: width .4s ease-in-out;
    transition: width .4s ease-in-out;
    margin-left: -50px;
    margin-top: 110px;
    z-index: 5;
}

div#search_result {
    width: 400px;
    padding: 5px 20px 12px 40px;
    -webkit-transition: width .4s ease-in-out;
    transition: width .4s ease-in-out;
    margin-left: -88px;
    font-size: 20px;
    line-height: 23px;
    font-family: 'Raleway', sans-serif;
    text-transform: capitalize;
}

.pre {
    color: #7f7e7e;
    font-size: 12px;
    font-family: sans-serif;
}

#canvas img {
    max-width:none!important;
    background:none!important
}

h1 {
    color: #555;
    font: bold 12px 'helvetica neue', helvetica, arial, sans-serif;
    left: 0;
    margin: 20px 0 0 0;
    position: absolute;
    top: 50%;
    text-align: center;
    width: 100%;
}

#bars {
    height: 30px;
    left: 143px;
    margin: -45px 0 0 -20px;
    position: absolute;
    top: 50px;
    display: none;
}

.bar {
    background: #ff6666;
    bottom: 1px;
    height: 3px;
    position: absolute;
    width: 3px;
    animation: sound 0ms -800ms linear infinite alternate;
}

@keyframes sound {
    0% {
        opacity: .30;
        height: 3px;
    }
    100% {
        opacity: 1;
        height: 23px;
    }
}

.bar:nth-child(1)  { left: 1px; animation-duration: 474ms; }
.bar:nth-child(2)  { left: 5px; animation-duration: 433ms; }
.bar:nth-child(3)  { left: 9px; animation-duration: 407ms; }
.bar:nth-child(4)  { left: 13px; animation-duration: 458ms; }
.bar:nth-child(5)  { left: 17px; animation-duration: 400ms; }
.bar:nth-child(6)  { left: 21px; animation-duration: 427ms; }
.bar:nth-child(7)  { left: 25px; animation-duration: 441ms; }
.bar:nth-child(8)  { left: 29px; animation-duration: 319ms; }
.bar:nth-child(9)  { left: 33px; animation-duration: 449ms; }
.bar:nth-child(10)  { left: -3px; animation-duration: 400ms; }
.bar:nth-child(11)  { left: 37px; animation-duration: 415ms; }
.bar:nth-child(12)  { left: 41px; animation-duration: 401ms; }
.bar:nth-child(13)  { left: 45px; animation-duration: 435ms; }
.bar:nth-child(14)  { left: 49px; animation-duration: 415ms; }
.bar:nth-child(15)  { left: 51px; animation-duration: 400ms; }
.bar:nth-child(16)  { left: 55px; animation-duration: 441ms; }

